--- a/css/style.css
+++ b/css/style.css
@@ -271,8 +271,7 @@ header {
     --swiper-pagination-bullet-vertical-gap: 50px;
     width: 100%;
     height: 100%;
-    display: flex;
-    
+    display: flex;   
 }
 
 /** Slides de Swiper **/
@@ -296,15 +295,132 @@ div.swiper-slide {
 }
 
 .btn {
-    padding: 15px 30px;
-    font-size: 18px;
+    font-family: 'bebasneueregular';
+    margin: 50px 0;
+    text-shadow: 5px 5px 5px black;
+    letter-spacing: 3px;
+    position: relative;
+    padding: 15px 20px;
+    font-size: 25px;
     background-color: transparent;
     color: white;
-    border: 2px solid white;
-    border-radius: 8px;
+    border: 2px white;
+    border-style: solid none;
     cursor: pointer;
     transition: background-color 0.3s, transform 0.2s, box-shadow 0.2s;
   }
+
+.btn::before,
+.btn::after {
+  content: "";
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 0;
+      height: 0;
+      border: 32px dotted transparent;
+      margin: 0 -45px;
+    }
+.btn:hover {
+      transform: scale(1.1);
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
+    }
+
+.pulse-circle {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 30px;
+      height: 30px;
+      background-color: transparent; /* Couleur du cercle */
+      border: 3px solid #ffffff; /* Bordure blanche */
+      border-radius: 50%;
+      animation: pulse 3s infinite ease-in-out;
+      box-shadow: 0 0 0 rgb(255, 255, 255);
+      position: relative; /* Nécessaire pour décaler avec 'left' */
+      left: 200px; /* Déplace vers la droite */
+      cursor: pointer;
+      transition: transform 0.3s ease;
+      overflow: visible; /* Empêche le texte de dépasser */
+    }
+.circle-deco {
+      position: absolute;
+      width: 50px;
+      height: 50px;
+      border: 1px dotted #ffffff;
+      border-radius: 50%;
+      opacity: 1;
+      z-index: 0;
+      transition: transform 0.4s ease;
+    }
+
+.inner-circle {
+  width: 5px;
+  height: 5px;
+  background-color: #ffffff; /* Couleur du cercle */
+  border: 2px solid #ffffff; /* Bordure blanche */
+  border-radius: 50%;
+  box-shadow: 0 0 0 rgb(255, 255, 255);
+  transition: transform 0.3s ease, font-size 0.3s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  position: relative;
+  z-index: 1;
+}
+
+.circle-text {
+  opacity: 0;
+  color: black;
+  font-size: 0;
+  transition: opacity 0.3s ease, font-size 0.3s ease;
+  pointer-events: none;
+  white-space: nowrap;
+}
+
+ /* Clic pour agrandir les cercles */
+ .pulse-circle.clicked .inner-circle {
+  transform: scale(32);
+}
+
+.pulse-circle.clicked .circle-deco {
+  transform: scale(6); /* Ajuste pour qu'il entoure proprement l'autre cercle */
+  opacity: 0.6;
+}
+
+.pulse-circle.clicked .circle-text {
+  opacity: 1;
+  font-size: 0.8px;
+  font-family: 'hiromisake';
+}
+
+@keyframes pulse {
+      0% {
+        transform: scale(1);
+        box-shadow: 0 0 0 0 rgb(255, 255, 255);
+      }
+      70% {
+        transform: scale(1);
+        box-shadow: 0 0 0 20px rgba(255, 255, 255, 0);
+      }
+      100% {
+        transform: scale(1);
+        box-shadow: 0 0 0 0 rgba(76, 175, 80, 0);
+      }
+    }
+
+/* Flèche gauche */
+.btn::before {
+  left: -20px;
+  border-right-color: #fff;
+}
+
+/* Flèche droite */
+.btn::after {
+  right: -20px;
+  border-left-color: #fff;
+}
 
 /** Swiper Navigation **/
 
@@ -331,6 +447,11 @@ span.swiper-pagination-bullet {
     background-color: #fff;
     opacity: 1;
     margin: 10px 0;
+}
+
+.swiper-pagination-bullet-active {
+  transform: scale(1.6); /* Grossit le bullet */
+  opacity: 1;
 }
 
 span.swiper-pagination-bullet:hover {
