--- a/css/style.css
+++ b/css/style.css
@@ -482,6 +482,123 @@ div.swiper-slide {
   border-left-color: #fff;
 }
 
+/* Titres visibles */
+.slider-title, .slider-subtitle {
+  color: #ffffff;
+}
+
+.slider-title {
+  font-family: 'hiromisake';
+  font-size: 50px;
+}
+
+.slider-subtitle {
+  font-family: 'bebasneueregular';
+  font-size: 30px;
+
+}
+
+/* Espace entre les slides horizontaux */
+.myHorizontalSwiper .swiper-slide {
+  border: 10px solid white; /* bordure type photo */
+  overflow: visible;
+  background-color: transparent;
+  transition: transform 0.3s ease;
+  width: auto;
+  max-width: 265px;
+  height: 450px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Cadre autour de la vidéo */
+.slide-frame {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+/* Vidéo avec filtre sombre par défaut */
+.slide-video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  filter: brightness(60%);
+  transition: filter 0.3s ease;
+}
+
+/* Effet au survol : joue la vidéo + retire le filtre */
+.slide-frame:hover .slide-video {
+  filter: brightness(100%);
+}
+
+.myHorizontalSwiper {
+  width: 100%;
+  max-width: 1200px; /* si tu veux un conteneur centré et contrôlé */
+  padding: 20px 0;
+  overflow: hidden;
+  position: relative;
+}
+
+.horizontal-slider-container {
+  background-color: #2c2c2e;
+  width: 100%;
+  min-height: 100vh;
+  padding: 40px 0;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  position: relative;
+  top: 60px;
+}
+
+.horizontal-button-prev::after {
+  content: '‹'; /* flèche gauche */
+}
+
+.horizontal-button-next::after {
+  content: '›'; /* flèche droite */
+}
+
+.horizontal-button-prev::after,
+.horizontal-button-next::after {
+  color: white;         /* couleur de la flèche */
+  font-size: 100px; 
+  line-height: 1;     /* taille de la flèche */
+}
+
+.horizontal-button-prev,
+.horizontal-button-next {
+  position: absolute;
+  top: 50%; /* centre verticalement */
+  transform: translateY(-50%);
+  z-index: 10;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  pointer-events: auto;
+} 
+
+
+/* Flèche gauche */
+.horizontal-button-prev {
+  left: 0px; /* éloigne-la du slider */
+}
+
+/* Flèche droite */
+.horizontal-button-next {
+  right: 0px;
+}
+
+
 /** Swiper Navigation **/
 
 .swiper-pagination {
