--- a/css/footer.css
+++ b/css/footer.css
@@ -15,9 +15,13 @@ body{
     padding: 0;
 }
 
+footer {
+    width: 100%;
+}
+
 .footer-top {
     position: relative;
-    height: 72vh;
+    height: 82vh;
     width: 100%;
     background-image: url('../img/montfuji.jpg');
     background-size: cover;
@@ -60,24 +64,29 @@ body{
 
 .footer-bottom {
     background-color: #000;
-    height: 28vh;
+    height: 18vh;
     width: 100%;
     display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
   }
 
   .footer-column {
-    flex: 1;
     min-width: 200px;
     margin: 0;
+    width: 30%;
+  }
+
+  .footer-column:first-child {
+      width: 10%;
+      position: relative;
+      left: 0;
+      transform: translateX(0%);
   }
   
   .footer-column h3 {
-    font-size: 25px;
+    font-size: 20px;
     font-family: 'hiromisake';
     letter-spacing: 1px;
-    margin-bottom: 50px;
+    margin: 2vh 0 2vh 0;
     color: white;
   }
   
@@ -89,7 +98,7 @@ body{
   .footer-column li {
     margin-bottom: 15px;
     font-family: 'bebasneueregular';
-    font-size: 22px;
+    font-size: 18px;
     margin-bottom: 10px;
   }
   
@@ -109,7 +118,7 @@ body{
     flex-direction: row;
     gap: 0.8rem; /* espace entre les boutons */
     padding: 0;
-    margin: 100px 0;
+    margin: 7vh 0 0 0;
     list-style: none;
     justify-content:flex-start;
   }
@@ -119,7 +128,7 @@ section a {
     text-decoration-line: none;
 }
 
-.btn {
+.footer-btn {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -132,7 +141,7 @@ section a {
     box-shadow: -20px 20px 10px rgba(0, 0, 0, 0.5);
 }
 
-.logo {
+.social-media-logo {
     font-size: 30px;
 }
 
@@ -143,7 +152,7 @@ section a {
  
 
 /** fait l'effet 3D sur le petit côté des rectangles **/
-.btn::before {
+.footer-btn::before {
     content: "";
     position: absolute;
     width: 20px;
@@ -155,7 +164,7 @@ section a {
 }
 
 /** fait l'effet 3D sur le grand côté des rectangles **/
-.btn::after {
+.footer-btn::after {
     content: "";
     position: absolute;
     width: 100%;
@@ -166,14 +175,14 @@ section a {
     left: -10px;
 }
 
-.btn,
-.btn::before,
-.btn::after {
+.footer-btn,
+.footer-btn::before,
+.footer-btn::after {
     transition: 0.5s;
 }
 
-.btn:hover {
-    transform: rotate(-30deg) skewX(25deg) translate(25px, -25px);
+.footer-btn:hover {
+    transform: rotate(-30deg) skewX(25deg) translate(15px, -15px);
     box-shadow: -40px 40px 10px rgba(0, 0, 0, 0.5);
     color: white;
 }
@@ -212,4 +221,8 @@ section a {
 
 .btn-youtube:hover::after {
     background: #ff3535;
+}
+
+.logo > img:last-child{
+    height: 100px;
 }
