--- a/css/style.css
+++ b/css/style.css
@@ -604,16 +604,17 @@ div.swiper-slide {
 .swiper-pagination {
     width: 100px;
     height: 100px;
+    top: 35% !important;
 }
 
 .swiper-pagination:before {
     content: '';
     position: absolute;
-    top: 0;
+    top: 60px;
     bottom: 0;
     left: 5%; /* Positionner au centre */
     width: 2px;
-    height: 480px;
+    height: 50vh;
     background-color: #fff; /* Couleur du trait */
   }
 
