--- a/css/style.css
+++ b/css/style.css
@@ -29,9 +29,7 @@ header {
     position: fixed;
     top: 0;
     width: 100%;
-    height: 140px;
     z-index: 100;
-    background-color: #fff;
   }
 
   .header-container {
@@ -43,13 +41,14 @@ header {
     position: relative;
   }
 
+
+/** CSS du texte sous le logo du header **/
   .logo {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    font-size: 1.5rem;
     font-weight: bold;
-    color: black;
+    text-shadow: 5px 5px 5px black;
   }
 
   .logo > img {
@@ -62,6 +61,7 @@ header {
     justify-content: center;
     font-family: 'bebasneueregular';
     font-size: 37px;
+    color: #fff;
   }
 
   .menu {
@@ -76,15 +76,16 @@ header {
   .dropdown > label {
     cursor: pointer;
     font-weight: 500;
-    color: black;
+    color: #fff;
     padding: 0.5rem;
     display: inline-block;
     font-size: 30px;
     font-family: 'bebasneueregular';
+    text-shadow: 5px 5px 5px black;
   }
 
   .dropdown > label:hover {
-    color: #5d8fac;
+    text-decoration: underline;
   }
 
   .dropdown-content {
@@ -498,7 +499,7 @@ div.swiper-slide {
 
 }
 
-/* Espace entre les slides horizontaux */
+/* Espace entre les slides horizontales */
 .myHorizontalSwiper .swiper-slide {
   border: 10px solid white; /* bordure type photo */
   overflow: visible;
@@ -542,9 +543,9 @@ div.swiper-slide {
 }
 
 .horizontal-slider-container {
-  background-color: #2c2c2e;
+  background-color: rgb(44, 41, 41);
   width: 100%;
-  min-height: 100vh;
+  min-height: 115vh;
   padding: 40px 0;
   box-sizing: border-box;
   display: flex;
