Changed the active pagination design and updating the gitignore file.

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+:root {
+    --before-height: 0vh;
+    --after-height: 47vh;
+    --after-top: 8.9vh;
+}
+
 /** CSS Relatifs à la fonts **/
 
 @font-face {
@@ -614,9 +620,20 @@ div.swiper-slide {
     bottom: 0;
     left: 5%; /* Positionner au centre */
     width: 2px;
-    height: 50vh;
+    height: var(--before-height);
     background-color: #fff; /* Couleur du trait */
   }
+
+.swiper-pagination:after {
+    content: '';
+    position: absolute;
+    top: var(--after-top);
+    bottom: 0;
+    left: 5%;
+    width: 2px;
+    height: var(--after-height);
+    background-color: #fff;
+}
 
 span.swiper-pagination-bullet {
     transition: transform 0.3s ease, scale 0.3s ease;
@@ -640,4 +657,94 @@ span.swiper-pagination-bullet:hover {
 
 .myHorizontalSwiper > .swiper-wrapper > .swiper-slide {
     pointer-events: visible !important;
+}
+
+
+
+
+
+
+
+#cherryflower-icon {
+    position: absolute;
+    width: 60px;
+    top: 32.5vh;
+    left: 93vw;
+    border: 2px solid white;
+    border-radius: 50%;
+}
+
+#culture-icon{
+    position: absolute;
+    width: 60px;
+    top: 38vh;
+    left: 93vw;
+    display: none;
+    border: 2px solid white;
+    border-radius: 50%;
+}
+
+#gastronomie-icon{
+    position: absolute;
+    width: 60px;
+    top: 45vh;
+    left: 93vw;
+    display: none;
+    border: 2px solid white;
+    border-radius: 50%;
+}
+
+
+#aventure-icon{
+    position: absolute;
+    width: 60px;
+    top: 51vh;
+    left: 93vw;
+    display: none;
+    border: 2px solid white;
+    border-radius: 50%;
+}
+
+#biodiversite-icon{
+    position: absolute;
+    width: 60px;
+    top: 57vh;
+    left: 93vw;
+    display: none;
+    border: 2px solid white;
+    border-radius: 50%;
+}
+
+#tradition-icon{
+    position: absolute;
+    width: 60px;
+    top: 63vh;
+    left: 93vw;
+    display: none;
+    border: 2px solid white;
+    border-radius: 50%;
+}
+
+#insolite-icon{
+    position: absolute;
+    width: 60px;
+    top: 69vh;
+    left: 93vw;
+    display: none;
+    border: 2px solid white;
+    border-radius: 50%;
+}
+
+#cherryflower2-icon{
+    position: absolute;
+    width: 60px;
+    top: 75vh;
+    left: 93vw;
+    display: none;
+    border: 2px solid white;
+    border-radius: 50%;
+}
+
+.swiper-pagination-bullet-active {
+    opacity: 0 !important;
 }
