--- a/css/footer.css
+++ b/css/footer.css
@@ -23,7 +23,7 @@ footer {
     position: relative;
     height: 82vh;
     width: 100%;
-    background-image: url('../img/montfuji.jpg');
+    background-image: url('../img/slides/montfuji.jpg');
     background-size: cover;
     background-position: center;
     display: flex;
